<resources>
    <string name="app_name">taller_3</string>
    <string name="title_home">Home</string>
    <string name="title_albums">Albums</string>
    <string name="title_tracks">Tracks</string>
    <string name="title_track_description">Song</string>
    
    <string name="title_track">I wanna be yours</string>
    <string name="artist_track">Arctic Monkeys</string>
    <string name="duration_track">3:20</string>
    <string name="play_track">Playing</string>
    <string name="album_track">AM</string>

    <string name="repeat">Repeat</string>
    <string name="random">Random</string>

</resources>
