<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.taller_3.ui.albums.AlbumsFragment"
        android:label="@string/title_albums"
        tools:layout="@layout/fragment_albums" />
    <fragment
        android:id="@+id/navigation_albumlist"
        android:name="com.example.taller_3.ui.albums.AlbumList"
        android:label="Album List"
        tools:layout="@layout/album_list">
    <argument
        android:name="Album"
        app:argType="string" />

    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.taller_3.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.taller_3.ui.tracks.TracksFragment"
        android:label="@string/title_tracks"
        tools:layout="@layout/fragment_tracks" />
</navigation>
