<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="78dp"
    android:background="@android:color/background_light">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="77dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/track_imag"
                android:layout_width="59dp"
                android:layout_height="59dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/album_am"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/track_name_text"
                android:layout_width="200dp"
                android:layout_height="23dp"
                android:layout_marginStart="16dp"
                android:text="@string/title_track"
                android:textColor="@color/color_letters"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/track_imag"
                app:layout_constraintTop_toTopOf="@+id/track_imag" />

            <TextView
                android:id="@+id/track_artist_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/artist_track"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/track_imag"
                app:layout_constraintStart_toStartOf="@+id/track_name_text" />

            <TextView
                android:id="@+id/track_duration_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/duration_track"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/track_artist_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/track_artist_text"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>